# zen

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
core/: auth.py  config.py  database.py
core/models/: accounts.py
core/routers/: auth.py  product.py  shop.py
core/schemas/: accounts.py
core/tasks/: cron.py
