[tool.poetry]
name = "zen"
version = "0.1.0"
description = ""
authors = ["michael <michaelutoh21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
celery = "^5.2.7"
redis = "^4.3.4"
flower = "^1.2.0"
black = "^22.6.0"
aiofiles = "^0.8.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.40"
passlib = "^1.7.4"
python-jose = "^3.3.0"
email-validator = "^1.2.1"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
